--- a/src/app/projets/content/site-piano.mdx
+++ b/src/app/projets/content/site-piano.mdx
@@ -1,6 +1,7 @@
 ---
-title: 'Site d’apprentissage des accords de piano'
+title: 'Accords de piano'
 publishedAt: '2025-07-10'
+stack: React, Web MIDI API, HTML, CSS, JavaScript
 summary: 'Une application web interactive pour apprendre les accords de piano en temps réel via un clavier MIDI.'
 ---
 
