--- a/src/app/projets/content/sudoku.mdx
+++ b/src/app/projets/content/sudoku.mdx
@@ -42,7 +42,7 @@ J’ai conçu un **jeu de Sudoku interactif** permettant :
 
 ---
 
-## 🔗 Démo et code
+## Démo et code
 
 - 🔗 [site en ligne](https://ryodes.github.io/sudoku/)
 - 💻 [Code source GitHub](https://github.com/ryodes/sudoku)
