--- a/src/app/projets/content/portfolio.mdx
+++ b/src/app/projets/content/portfolio.mdx
@@ -54,6 +54,6 @@ Cela m’a permis de rester concentré sur les aspects essentiels : la structure
 
 ## Liens
 
-- 🔗 [Portfolio en ligne (en cours)](#)
+- 🔗 [Portfolio en ligne](#)
 - 💻 [Code source GitHub](https://github.com/ryodes/portfolio-nextjs)
 
