--- a/src/app/blog/content/premier-emploi.mdx
+++ b/src/app/blog/content/premier-emploi.mdx
@@ -1,5 +1,5 @@
 ---
-title: "mon premier contract de travail"
+title: "mon premier contrat de travail"
 publishedAt: "2025-07-06"
 summary: "Mon expérience chez EANQA, de l’alternance au CDI. Ce que j’ai appris, les défis du quotidien, et pourquoi une startup peut être une école incroyable."
 ---
