fixe markdwon render with new css & add image/video on project section

--- a/src/app/projets/content/lua-game.mdx
+++ b/src/app/projets/content/lua-game.mdx
@@ -40,6 +40,18 @@ Cela m’a aussi montré combien la **programmation de jeux peut être formatric
 
 ---
 
+## Preview
+
+<video
+  src="/DarkBreaker.mp4"
+  width="640"
+  height="500"
+  controls
+  autoPlay={false}
+/>
+
+---
+
 ## 📦 Code source
 
 Le projet est disponible en local uniquement pour l’instant, donc go faire un tour sur mon github 
