--- a/src/app/projets/content/site-piano.mdx
+++ b/src/app/projets/content/site-piano.mdx
@@ -33,6 +33,15 @@ Ce système permet un apprentissage **progressif et ludique**, basé sur la prat
 
 Un outil unique et fonctionnel, pensé pour les débutants comme pour les musiciens confirmés, accessible depuis un simple navigateur.
 
+## Preview
+
+<Image
+  src="/piano-screen.png"
+  alt="piano screen"
+  width={640}
+  height={500}
+/>
+
 ## Liens utiles
 
 - 🔗 [Voir le site en ligne](https://learn-chords.netlify.app/)
