--- a/src/app/projets/content/test-axa.mdx
+++ b/src/app/projets/content/test-axa.mdx
@@ -62,6 +62,34 @@ Ce test m’a permis de démontrer ma capacité à **concevoir une application m
 
 ---
 
+## Preview
+Premier écran
+
+<Image
+  src="/axa1.png"
+  alt="Axa screen 1"
+  width={640}
+  height={500}
+/>  
+
+Deuxième écran
+
+<Image
+  src="/axa2.png"
+  alt="Axa screen 2"
+  width={640}
+  height={500}
+/>
+
+<Image
+  src="/axa3.png"
+  alt="Axa screen 3"
+  width={640}
+  height={500}
+/>
+
+---
+
 ## Liens
 
 - 🔗 [test technique en ligne](https://ryodes.github.io/test-technique-axa-frontend//)
