fixe fault orto & new sitemap

--- a/src/app/projets/content/sudoku.mdx
+++ b/src/app/projets/content/sudoku.mdx
@@ -42,7 +42,7 @@ J’ai conçu un **jeu de Sudoku interactif** permettant :
 
 ---
 
-Le petit bout de code récursive dont je suis fière ^^
+Le petit bout de code récursif dont je suis fier ^^
 ```
 function solve() {
     for (let i=0; i<9; i++) {
